--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,8 @@
     },
     "require-dev": {
         "laravel/pint": "^1.13",
-        "orchestra/testbench": "^7.37|^8.0",
+        "orchestra/testbench": "^7.37|^8.0|^9.0",
         "pestphp/pest": "^1.23",
-        "phpunit/phpunit": "^9.6",
         "roave/security-advisories": "dev-latest",
         "slevomat/coding-standard": "^8.14"
     },
