--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require-dev": {
         "laravel/pint": "^1.13",
         "orchestra/testbench": "^7.37|^8.0|^9.0|^10.0",
-        "pestphp/pest": "^1.23|^2.0|^3.0|^4.0",
+        "pestphp/pest": "^1.23|^2.0|^3.0",
         "roave/security-advisories": "dev-latest",
         "slevomat/coding-standard": "^8.14"
     },
