--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     },
     "require-dev": {
         "laravel/pint": "^1.13",
-        "orchestra/testbench": "^7.37|^8.0|^9.0",
-        "pestphp/pest": "^1.23",
+        "orchestra/testbench": "^7.37|^8.0|^9.0|^10.0",
+        "pestphp/pest": "^1.23|^2.0|^3.0",
         "roave/security-advisories": "dev-latest",
         "slevomat/coding-standard": "^8.14"
     },
